kubernetes/argo-apps/default/esphome/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: esphome
  namespace: default
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |-
      conditions: ["len([BODY]) == 0"]
      group: internal
      dns:
        query-name: esphome.unscfleet.com
        query-type: A
      url: 1.1.1.1
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - esphome.unscfleet.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: esphome
          port: 6052
          weight: 1
